--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
 # Profile information
-name: Fresh
-title: Fresh - Free Jekyll Theme
+name: thedesignatedgeek
+title: TheDesignatedGeek Page using Fresh - Free Jekyll Theme
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This page is for my testing purposes
 permalink: ':title/'
 baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "artemsheludko.pw" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
 facebook: #Add your Facebook
@@ -16,7 +14,7 @@ google-plus: #Add your Google+
 github: #Add your Github
 
 # Contact form
-email: #your-email@domain.com
+email: thedesignatedgeek@gmail.com
 
 # Comments
 discus-identifier: # Add your Disqus identifier
