--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: TheDesignatedGeek Page using Fresh - Free Jekyll Theme
 description: > # this means to ignore newlines until "baseurl:"
   This page is for my testing purposes
 permalink: ':title/'
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/_posts" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Social
