--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ email: thedesignatedgeek@gmail.com
 avatar: assets/images/Mandrill.png
 
 # You'll want to customize url and baseurl for your own site:
-baseurl: "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
+baseurl: # "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
 # Social settings
