--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ avatar: assets/images/Mandrill.png
 
 # You'll want to customize url and baseurl for your own site:
 baseurl: # "/jekyll-theme-prologue" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: http://thedesignatedgeek.xyz  # the base hostname & protocol for your site
 
 # Social settings
 facebook_url:
